Update some libs, cleanups